Fix contact overlay on mobile

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -509,15 +509,28 @@ body {
     color: $color-white;
     @include centered;
     font-weight: 300;
-    font-size: 24px;
-    line-height: 32px;
-    font-weight: 300;
+    font-size: 18px;
+    line-height: 24px;
+
+    @include mq($bp768max) {
+      width: 280px;
+    }
+
+    @include mq($bp768) {
+      font-size: 24px;
+      line-height: 32px;
+    }
 
     span {
-      display: inline-block;
-      margin-right: 30px;
-      width: 70px;
       cursor: default;
+      margin-right: 30px;
+      display: inline-block;
+      width: 45px;
+      margin-bottom: 0;
+
+      @include mq($bp768) {
+        width: 70px;
+      }
     }
 
     div {
@@ -543,13 +556,18 @@ body {
     z-index: 3000;
     color: $color-white;
     position: absolute;
-    top: 70px;
-    right: 70px;
+    top: 30px;
+    right: 30px;
     background: transparent;
     font-weight: 300;
     font-size: 40px;
     transition: color 500ms;
     transform: scale(1, 0.8);
+
+    @include mq($bp768) {
+      top: 70px;
+      right: 70px;
+    }
 
     &:hover {
       cursor: pointer;
